--- a/requirements.txt
+++ b/requirements.txt
@@ -1,139 +1,80 @@
-    asgiref==3.8.1
-    attrs==20.3.0
-    bcrypt==3.2.0
-    beautifulsoup4==4.12.3
-    blinker==1.7.0
-    Brlapi==0.8.3
-    bsedata==0.6.0
-    build==1.2.2
-    CacheControl==0.14.0
-    cachelib==0.13.0
-    certifi==2020.6.20
-    cfgv==3.3.1
-    chardet==4.0.0
-    charset-normalizer==3.3.2
-    cleo==2.1.0
-    click==8.1.7
-    colorama==0.4.4
-    configobj==5.0.6
-    crashtest==0.4.1
-    cryptography==3.4.8
-    DateTime==5.5
-    dbus-python==1.2.18
-    defer==1.0.6
-    distlib==0.3.8
-    distro==1.7.0
-    distro-info==1.1+ubuntu0.2
-    Django==5.1.1
-    django-classy-tags==4.1.0
-    django-cookie-law==2.2.0
-    django-cors-headers==4.4.0
-    django-impersonate==1.9.4
-    djangorestframework==3.15.2
-    djangorestframework-simplejwt==5.3.1
-    dulwich==0.21.7
-    duplicity==0.8.21
-    fasteners==0.14.1
-    fastjsonschema==2.20.0
-    filelock==3.16.0
-    Flask==3.0.2
-    Flask-Session==0.8.0
-    future==0.18.2
-    gbinder-python==1.1.2
-    html5lib==1.1
-    httplib2==0.20.2
-    identify==2.4.10
-    idna==3.3
-    importlib_metadata==8.5.0
-    installer==0.7.0
-    itsdangerous==2.1.2
-    jaraco.classes==3.4.0
-    jeepney==0.7.1
-    jellyfish==0.11.2
-    Jinja2==3.1.3
-    keyring==24.3.1
-    language-selector==0.1
-    launchpadlib==1.10.16
-    lazr.restfulclient==0.14.4
-    lazr.uri==1.0.6
-    lib50==3.0.11
-    lockfile==0.12.2
-    louis==3.20.0
-    lxml==4.8.0
-    macaroonbakery==1.3.1
-    Mako==1.1.3
-    markdown2==2.5.0
-    MarkupSafe==2.1.5
-    monotonic==1.6
-    more-itertools==8.10.0
-    msgspec==0.18.6
-    netifaces==0.11.0
-    nodeenv==0.13.4
-    nselib==0.7
-    numpy==1.26.4
-    oauthlib==3.2.0
-    olefile==0.46
-    packaging==24.1
-    pandas==2.2.0
-    paramiko==2.9.3
-    pexpect==4.8.0
-    Pillow==9.0.1
-    pkginfo==1.11.1
-    platformdirs==4.3.3
-    poetry==1.8.3
-    poetry-core==1.9.0
-    poetry-plugin-export==1.8.0
-    pre-commit==2.17.0
-    protobuf==3.12.4
-    psycopg==3.2.1
-    psycopg-binary==3.2.1
-    ptyprocess==0.7.0
-    pyarrow==16.1.0
-    pycairo==1.20.1
-    pycups==2.0.1
-    PyGObject==3.42.1
-    PyJWT==2.3.0
-    pymacaroons==0.13.0
-    PyNaCl==1.5.0
-    pyparsing==2.4.7
-    pyproject_hooks==1.1.0
-    pyRFC3339==1.1
-    python-dateutil==2.8.2
-    python-debian==0.1.43+ubuntu1.1
-    pytz==2022.1
-    pyxdg==0.27
-    PyYAML==5.4.1
-    rapidfuzz==3.9.7
-    reportlab==3.6.8
-    requests==2.32.3
-    requests-toolbelt==1.0.0
-    scipy==1.14.0
-    screen-resolution-extra==0.0.0
-    SecretStorage==3.3.1
-    shellingham==1.5.4
-    six==1.16.0
-    soupsieve==2.3.1
-    sqlparse==0.5.1
-    submit50==3.1.5
-    systemd-python==234
-    termcolor==1.1.0
-    toml==0.10.2
-    tomli==2.0.1
-    tomlkit==0.13.2
-    trove-classifiers==2024.9.12
-    typing_extensions==4.12.2
-    tzdata==2024.1
-    ubuntu-pro-client==8001
-    ufw==0.36.1
-    unattended-upgrades==0.1
-    urllib3==1.26.5
-    variety==0.8.5
-    virtualenv==20.26.4
-    wadllib==1.3.6
-    webencodings==0.5.1
-    Werkzeug==3.0.1
-    whitenoise==6.7.0
-    xdg==5
-    xkit==0.0.0
-    zipp==3.20.2
-    zope.interface==6.4.post2
+asgiref==3.8.1
+attrs==20.3.0
+bcrypt==3.2.0
+beautifulsoup4==4.12.3
+blinker==1.7.0
+build==1.2.2
+CacheControl==0.14.0
+cachelib==0.13.0
+certifi==2020.6.20
+cfgv==3.3.1
+chardet==4.0.0
+charset-normalizer==3.3.2
+cleo==2.1.0
+click==8.1.7
+colorama==0.4.4
+configobj==5.0.6
+crashtest==0.4.1
+cryptography==3.4.8  # Consider updating to a newer version
+DateTime==5.5
+Django==5.1.1
+django-classy-tags==4.1.0
+django-cookie-law==2.2.0
+django-cors-headers==4.4.0
+django-impersonate==1.9.4
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+filelock==3.16.0
+Flask==3.0.2
+Flask-Session==0.8.0
+future==0.18.2
+html5lib==1.1
+httplib2==0.20.2
+identify==2.4.10
+idna==3.3
+importlib_metadata==8.5.0
+installer==0.7.0
+itsdangerous==2.1.2
+Jinja2==3.1.3
+lxml==4.8.0
+MarkupSafe==2.1.5
+monotonic==1.6
+msgspec==0.18.6
+numpy==1.26.4
+oauthlib==3.2.0
+olefile==0.46
+packaging==24.1
+pandas==2.2.0
+paramiko==2.9.3
+Pillow==9.0.1
+platformdirs==4.3.3
+poetry==1.8.3
+poetry-core==1.9.0
+poetry-plugin-export==1.8.0
+pre-commit==2.17.0
+protobuf==3.12.4
+psycopg==3.2.1
+psycopg-binary==3.2.1
+ptyprocess==0.7.0
+pyarrow==16.1.0
+pyJWT==2.3.0
+PyNaCl==1.5.0
+python-dateutil==2.8.2
+pytz==2022.1
+rapidfuzz==3.9.7
+reportlab==3.6.8
+requests==2.32.3
+requests-toolbelt==1.0.0
+scipy==1.14.0
+six==1.16.0
+soupsieve==2.3.1
+sqlparse==0.5.1
+toml==0.10.2
+tomli==2.0.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==1.26.5
+virtualenv==20.26.4
+Werkzeug==3.0.1
+whitenoise==6.7.0
+zipp==3.20.2
