--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ importlib_metadata==8.5.0
 installer==0.7.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
-lxml==4.8.0
+lxml==4.8.0 --only-binary :all:
 MarkupSafe==2.1.5
 monotonic==1.6
 msgspec==0.18.6
