--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,15 @@
     },
     {
       "src": "/(.*)",
-      "dest": "commerce/wsgi.py"
+      "dest": "commerce/wsgi.py"  
     }
+
+    
   ],
+  "hooks": {
+      "postdeploy": "python manage.py migrate"
+  },
   "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate"
+
+  
 }
