--- a/vercel.json
+++ b/vercel.json
@@ -15,13 +15,9 @@
       "src": "/(.*)",
       "dest": "commerce/wsgi.py"  
     }
-
-    
   ],
   "hooks": {
-      "postdeploy": "python manage.py migrate"
+    "postbuild": "python manage.py migrate --noinput"
   },
-  "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate"
-
-  
+  "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput"
 }
